spec/golden/errors/accessor_untyped.tn
class Settings
  getter name
end
